# agentic_ai_langchain

./: .env  agentic_rag.py  doc.txt  langchain.ipynb  pyproject.toml
